#
# Copyright (c) 2026 Christian Schulte <cs@schulte.it>
#
# Permission to use, copy, modify, and distribute this software for any
# purpose with or without fee is hereby granted, provided that the above
# copyright notice and this permission notice appear in all copies.
#
# THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
# WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
# ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
# WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
# ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
# OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
#
cmake_minimum_required(VERSION 3.31)

project(
	csv2etc
	VERSION 0.0
	DESCRIPTION "csv2etc"
	HOMEPAGE_URL "https://github.com/ChristianSchulte/csv2etc"
	LANGUAGES
	    C
)

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${PROJECT_DESCRIPTION})
set(CPACK_PACKAGE_VENDOR "Christian Schulte")
set(CPACK_PACKAGE_CONTACT "cs@schulte.it")
set(CPACK_PACKAGE_HOMEPAGE_URL ${PROJECT_HOMEPAGE_URL})
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")
set(CPACK_PACKAGE_EXECUTABLES "${PROJECT_NAME};csv2etc")
set(CPACK_NSIS_UNINSTALL_NAME
	"Uninstall ${CPACK_PACKAGE_NAME} ${CPACK_PACKAGE_VERSION}"
)
set(CPACK_NSIS_MENU_LINKS
	"https://github.com/ChristianSchulte/csv2etc" "GitHub"
)

include(CPack)

if(MSVC)
	set(CMAKE_C_STANDARD	11)
	set(CMAKE_C_STANDARD_REQUIRED	ON)
	set(CMAKE_C_EXTENSIONS	OFF)
	add_compile_definitions(HAVE_HOST_H)
endif()

add_executable(csv2etc)

target_sources(
	csv2etc
	PRIVATE
	    ${CMAKE_CURRENT_SOURCE_DIR}/cmd-dbip.c
	    ${CMAKE_CURRENT_SOURCE_DIR}/cmd-ip2location.c
	    ${CMAKE_CURRENT_SOURCE_DIR}/csv2etc.c
	    ${CMAKE_CURRENT_SOURCE_DIR}/heap.c
	    ${CMAKE_CURRENT_SOURCE_DIR}/map.c
	    ${CMAKE_CURRENT_SOURCE_DIR}/proc.c
	    ${CMAKE_CURRENT_SOURCE_DIR}/string.c
)

set_target_properties(
	csv2etc
	PROPERTIES
	    OUTPUT_NAME csv2etc
	    MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>"
	    VERSION ${PROJECT_VERSION}
)

install(
	TARGETS
		csv2etc
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
	FILE_SET HEADERS
	    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
)

